<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MahaVISTAAR-AI</string>
    <string name="app_name_label">MahaVISTAAR-AI</string>
    <string name="app_logo_name">Nanaji Deshmukh Krushi Sanjivani Prakalp</string>
    <string-array name="dashboard">
        <item>Weather</item>
        <item>Climate Resilient Technology</item>
        <item>DBT Schemes</item>
        <item>Soil Health Card</item>
        <item>Market Price</item>
        <item>Warehouse Availability</item>
        <item>GIS</item>
        <item>Pest Management</item>
        <item>Bandhavan</item>
    </string-array>
    <string name="mahila_shetkari">Mahila Shetkari</string>
    <string name="weather">  Weather</string>
    <string name="climateTechnology">Climate Resilient Technology</string>
    <string name="dbtschema"> DBT Schemes</string>
    <string name="soil_health_card">Soil Health Card</string>
    <string name="marketprice">Market Price</string>
    <string name="wareHouse">Warehouse Availability</string>
    <string name="gis">GIS</string>
    <string name="pest_management">Pest Management</string>
    <string name="bandhavan">Bandhavar</string>
    <string name="about">About</string>
    <string name="post_story"> Post </string>
    <string name="view_story"> View </string>
    <string name="village_profile">My Village Profile</string>
    <string name="pocra_dbt_activity">PoCRA DBT Details</string>
    <string name="pocra_dbt_status">PoCRA DBT Status</string>
    <string name="climate_resilient_technology">Climate Resilient Details</string>
    <string name="climate_resilient_Newupdate">खरीप विशेष</string>
    <string name="apply_for_mahadbt">To apply for MahaDBT</string>
    <string name="apply_for_pocradbt">To apply on NDKSP DBT portal</string>
    <string name="click_here">Click Here</string>
    <string name="add_Crop">Add Crop</string>
    <string name="change_Crop">Change Crop</string>
    <string name="no_crops_added">No Crops Added</string>
    <string name="see_less">see less</string>
    <string name="selected_crop">Selected Crop</string>
    <string name="good_morning">Good Morning, </string>
    <string name="good_afternoon">Good Afternoon, </string>
    <string name="good_evening">Good Evening, </string>
    <string name="good_night">Good Night, </string>
    <string name="delete">Delete</string>
    <string name="delete_crop_title">Delete Crop</string>
    <string name="delete_crop_message">Are you sure you want to delete?</string>
    <string name="delete_crop_yes">Yes</string>
    <string name="delete_crop_no">No</string>
    <string name="agri_forums"> Agri Forums</string>
    <string name="forums"> My Application </string>
    <string name="supportgrivience">Suggestion &amp; Grievances</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="news_details">News Details</string>
    <string name="identify_Pest_Disease">Identify Pest/Disease</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_Farmer_Name">Farmer Name</string>
    <string name="nav_header_subtitle">farmer </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="login_menu">Login / Registration</string>
    <string name="my_notification">My Notification</string>
    <string name="my_dbt_status">My DBT Application Status</string>
    <string name="my_farm_survay">My farm Survey</string>
    <string name="crop_registration">Crop Registration</string>
    <string name="logout"> logout</string>
    <string name="trainings_workshops_events_exposures">Trainings/Workshops/Events/Exposures</string>
    <string name="please_wait">Please wait…</string>
    <string name="login_mob_err">Please enter mobile number</string>
    <string name="new_pwd_err">Please enter valid password</string>
    <string name="login_mob_valid_err">Please enter valid mobile number</string>
    <string name="area_of_issues_err">Please enter your area of issues</string>
    <string name="area_of_issues">Enter your area of issues</string>
    <string name="grivience_categories">Select Category</string>
    <string name="image_upload">Upload Image/PDF</string>
    <string name="image_pdf">Upload PDF</string>
    <string name="upcoming_events_location">Upcoming Events Location</string>
    <string name="individual_benefit_component">Individual Benefit Component</string>
    <string name="agribusiness_component">Agribusiness Component</string>
    <string name="soil_and_water_conservation_practices">Soil and Water Conservation Practices</string>
    <string name="important_documents">Important Documents</string>
    <string name="required_documents">Required Documents</string>
    <string name="main_component">Main Component</string>
    <string name="regist_mob_verify_err">Please verify mobile number</string>
    <string name="regist_otp_err">Please enter OTP number</string>
    <string name="name_validation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ.</string>
    <string name="alpha_num_validation">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.</string>
    <string name="decimal">1234567890.</string>
    <string name="numeric">1234567890</string>
    <string name="ifsc_code">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="rs">\u20B9</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="vcrmc_members">List of VCRMC Members</string>
    <string name="nrm_structure">Details of NRM Structures</string>
    <string name="list_fpo">List of FPOs</string>
    <string name="maps">Maps</string>
    <string name="water_balance">Water Balance</string>
    <string name="email">Enter Registered Mobile Number</string>
    <string name="password">Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Sign In</string>
    <string name="sendOtp">Send OTP</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="Resend_OTP">Resend OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="Time">Time</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="create_new">Click here for registration</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="forgot_password">Create/Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="name_error">Please enter your name</string>
    <string name="lgn_register_phone_error">Please enter your registered number</string>
    <string name="password_error">Please enter a password</string>
    <string name="conf_password_error">Please enter your confirm password</string>
    <string name="pass_equals_confirmpass">Password and confirmed password should be same</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="feedback1_rating_error">Please give some rating for question1</string>
    <string name="feedback2_rating_error">Please give some rating for question2</string>
    <string name="district">District</string>
    <string name="taluka">Taluka</string>
    <string name="village">Village</string>
    <string name="farmer_select_district">Select District</string>
    <string name="farmer_select_taluka">Select Taluka</string>
    <string name="farmer_select_village">Select Village</string>
    <string name="farmer_select_date">Select Date</string>
    <string name="crop_advisory_feedback">Crop Advisory Feedback</string>
    <string name="farmer_select_market">Select Market</string>
    <string name="tonnes">MT</string>
    <string name="comming_Soon">Coming Soon ........</string>
    <string name="no_notifications_error">कोणत्याही नवीन सूचना आढळल्या नाहीत</string>
    <string name="NotificationMsg">Notification not found...!!! </string>
    <string name="min_Price">Min Price :  </string>
    <string name="max_Price">Max Price :  </string>
    <string name="avg_Price">Avg Price :  </string>
    <string name="advisoryTip"> टीप : वरील सल्ला भारतीय हवामान खात्याच्या अंदाजावर आधारित असून कृषि विद्यापीठाच्या शिफारशीप्रमाणे स्थानिक पीक परिस्थितीनुसार/ क्रॉपसॅपअंतर्गत तयार केलेला आहे. प्रकल्प व्यवस्थापन कक्ष मुंबई येथून सदर हवामान अंदाज व कृषि सल्ला प्रसारित करण्यात येत आहे. </string>
    <string name="error_farmer_select_district">Please Select District</string>
    <string name="error_farmer_select_taluka">Please Select Taluka</string>
    <string name="error_farmer_select_village">Please Select Village</string>
    <string name="aboutPocra_text1">PoCRA Project Area and its Villages</string>
    <string name="aboutPocra_text2">PoCRA Achivements and Success Stories</string>
    <string name="total_warehouse">Total Warehouse : </string>
    <string name="total_available_capacity">Total Availabale Capacity</string>
    <string name="record_date">Record Date </string>
    <string name="success_farmer"> Farmer Success Story </string>
    <string name="Pests_n_diseases_by_stage">Pests and Diseases by Stage</string>
    <string name="different_stages_text">All Pests and Diseases that might appear in your crop at different stages</string>
    <string name="Crop_name">Crop name</string>
    <string name="consent_one">I acknowledge that my data may be used as per the consent already provided under systems (Agristack in Maharashtra, MahaDBT) for e-KYC, eligibility determination, benefit delivery, and integration of agriculture-related services.</string>
    <string name="consent_two">I hereby provide my consent for sharing my personal details with the Department of Agriculture, Government of Maharashtra, for receiving personalized advisories and services.</string>
    <string name="consent_three">I allow the Department of Agriculture, Government of Maharashtra, to share my data with other Government Agencies/Departments for providing relevant service delivery and monitoring.</string>
    <string name="consent_four">I understand that I have the right to withdraw my consent at any time, though such withdrawal may affect the services I receive.</string>
    <string name="consent_five">I understand that my data will be stored securely, and efforts will be made to protect it from unauthorized access or misuse.</string>
    <string name="consent_for_mahavistaar">Consent for MahaVISTAAR</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="price_rs">Price (₹)</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_name_optional">Expense Name (Optional)</string>
    <string name="submit">Submit</string>
    <string name="select_category">Category</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="agristack_title">Link Your Farmer ID</string>
    <string name="agristack_request">Dear Farmer Friends, you can now link your Farmer ID in the MahaVistar app! This will automatically fill in your information and help you access various schemes, guidance, and services more easily. \n👉 Please click on the ‘Link Now’ option and complete the process by entering the required details. Your participation is the path to your progress!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_link">Link Now</string>
</resources>