<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/myprofile"
            android:title="@string/login_menu" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/myprofile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/dbt_schemes"
            android:title="@string/my_Notification" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/dbt_schemes"
            android:title="@string/my_dbt_status" />
        <item
            android:id="@+id/nav_my_farm_survay"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/my_farm_survay" />
        <item
            android:id="@+id/nav_crop_Registration"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/crop_registration" />
        <item
            android:id="@+id/nav_Trainings_Workshops_Events_Exposures"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/trainings_workshops_events_exposures" />

    </group>
</menu>