<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView63"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agristack_title"
            android:textColor="@color/font_color_figma"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/agristack_request"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                app:cornerRadius="@dimen/_15sdp"
                android:backgroundTint="@color/arrow_color_figma"
                android:layout_marginEnd="@dimen/_2sdp"
                android:text="@string/btn_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                app:cornerRadius="@dimen/_15sdp"
                android:backgroundTint="@color/actionbar_color_figma"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_weight="1"
                android:text="@string/btn_link" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>