<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout24"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/font_color_figma"
            android:textStyle="bold"
            android:text="@string/consent_for_mahavistaar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_weight="9"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/tick_green_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/consent_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_weight="9"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/tick_green_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/consent_two" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_weight="9"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/tick_green_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/consent_three" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_weight="9"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/tick_green_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/consent_four" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_weight="9"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/tick_green_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/_10sdp"
                        android:text="@string/consent_five" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/declineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/font_color_figma"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/decline" />

            <TextView
                android:id="@+id/acceptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_12sdp"
                android:textAllCaps="true"
                android:textColor="@color/actionbar_color_figma"
                android:textStyle="bold"
                android:text="@string/accept" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>