<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BandavarActivity">
    <include
        android:id="@+id/relativeLayoutTopBar"
        layout="@layout/layout_toolbar" />

    <EditText
        android:id="@+id/tv_farmer_success_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/relativeLayoutTopBar"
        android:layout_above="@+id/linLayoutButton"
        android:background="@drawable/login_edit_bg"
        android:elevation="8dp"
        android:singleLine="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="top|start"
        android:text="@string/success_farmer"
        android:hint="@string/success_farmer"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="15dp"
        android:paddingStart="@dimen/padding10"
        android:paddingEnd="@dimen/padding10"
        android:textColorHint="@color/text_black"
        android:textSize="@dimen/text12" />

    <LinearLayout
        android:id="@+id/linLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_post_story"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/height10"
            android:layout_weight="0.5"
            android:background="@drawable/dashboard_button"
            android:gravity="center"
            android:padding="@dimen/height5"
            android:text="@string/post_story"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />
        <TextView
            android:id="@+id/tv_view_story"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/height10"
            android:layout_weight="0.5"
            android:background="@drawable/dashboard_button"
            android:gravity="center"
            android:padding="@dimen/height5"
            android:text="@string/view_story"
            android:textColor="@color/white"
            android:textSize="@dimen/text16" />
    </LinearLayout>

</RelativeLayout>